--- a/src/index.html
+++ b/src/index.html
@@ -36,14 +36,6 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <!-- Añade más elementos de navegación aquí si es necesario -->
-          </ul>
-        </div>
       </div>
     </nav>
 
@@ -51,10 +43,11 @@
 
     <div class="container mt-4">
       <div class="row">
-        <div class="col-4">
-        <i class="fa-solid fa-screwdriver-wrench"></i> Los dominios disponibles son:
-        </div>
-        <div class="col-4" >
+        <div class="col-4 rounded border border-info-subtle p-3 ">
+        <i class="fa-solid fa-screwdriver-wrench"></i> <h3>Los dominios disponibles son:</h3>
+        <p>En total hay: <span id= "conteo">Tantos</span></p>  
+      </div>
+        <div class="col-4 border rounded border-info-subtle" >
         <p id = "dominios">Hola pinches</p>
         </div>
         <div class="col-4">
